add enable button to popup window

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>ProTime</h1>
-
-    <button id="userEnabled">Enable!</button>
+    <input type="checkbox" id="isEnabled" name="" value="isEnabled">
+    <label for="isEnabled">Enable ProTime?</label>
   </body>
 </html>
