--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>ProTime</h1>
-    <input type="checkbox" id="isEnabled" name="" value="isEnabled">
+    <input type="checkbox" id="isEnabled" value="isEnabled">
     <label for="isEnabled">Enable ProTime?</label>
   </body>
 </html>
