--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <title>Nothing</title>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>ProTime</h1>
