--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,6 @@
   <body>
     <h1>ProTime</h1>
     <input type="checkbox" id="isEnabled" value="isEnabled">
-    <label for="isEnabled">Enable ProTime?</label>
+    <label for="isEnabled">Enable ProTime</label>
   </body>
 </html>
