Design ideas, added siteList

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <h1>ProTime</h1>
-    <input type="checkbox" id="isEnabled" value="isEnabled">
-    <label for="isEnabled">Enable ProTime</label>
+    <input type="checkbox" id="checkBox" value="checkBox">
+    <label for="checkBox">Enable ProTime</label>
+    <div id="sitesList">
+      <h2>Facebook</h2>
+      <span>1 hour 12 minutes 32 seconds</span>
+      <h2>Twitter</h2>
+      <span>1 hour 12 minutes 32 seconds</span>
+      <h2>YouTube</h2>
+      <span>1 hour 12 minutes 32 seconds</span>
+    </div>
   </body>
 </html>
