--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,12 @@
   <head>
     <title>Nothing</title>
     <script src="jquery-3.3.1.min.js"></script>
-    <script src="popup.js"></script>
+	<script src="counter.js"></script>
+	<script src="popup.js"></script>
   </head>
   <body>
     <h1>ProTime</h1>
 
-    <button id="userEnabled">Enable!</button>
+    <button id="isEnabled">Enable!</button>
   </body>
 </html>
