BLAME THE GLOBALISTS!

--- a/popup.html
+++ b/popup.html
@@ -3,30 +3,13 @@
   <head>
     <title>Nothing</title>
     <script src="jquery-3.3.1.min.js"></script>
-<<<<<<< HEAD
-	<script src="counter.js"></script>
-	<script src="popup.js"></script>
-  </head>
-  <body>
-    <h1>ProTime</h1>
-
-    <button id="isEnabled">Enable!</button>
-=======
     <script src="popup.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>ProTime</h1>
+    <h1>Alex Jonesify</h1>
     <input type="checkbox" id="checkBox" value="checkBox">
-    <label for="checkBox">Enable ProTime</label>
-    <div id="sitesList">
-      <h2>Facebook</h2>
-      <span>1 hour 12 minutes 32 seconds</span>
-      <h2>Twitter</h2>
-      <span>1 hour 12 minutes 32 seconds</span>
-      <h2>YouTube</h2>
-      <span>1 hour 12 minutes 32 seconds</span>
-    </div>
->>>>>>> e74f77084dadb642f18f5fa27f1031ee9105adb3
+    <label for="checkBox">Keep the globalists out of your Javascript!</label>
+    <p>Don't let the pedophiles and psychic vampires sap your aura.</p>
   </body>
 </html>
