--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,6 @@
     <h1>Alex Jonesify</h1>
     <input type="checkbox" id="checkBox" value="checkBox">
     <label for="checkBox">Keep the globalists out of your Javascript!</label>
-    <p>Don't let the pedophiles and psychic vampires sap your aura.</p>
+    <p>Don't let the interdimensional psychic vampires sap your aura.</p>
   </body>
 </html>
