--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <h1>Alex Jonesify</h1>
-    <input type="checkbox" id="checkBox" value="checkBox">
-    <label for="checkBox">Keep the globalists out of your Javascript!</label>
+    <label>Keep the globalists out of your Javascript!</label>
     <p>Don't let the interdimensional psychic vampires sap your aura.</p>
   </body>
 </html>
